<resources>
    <string name="app_name">CubingCompanion</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">"Cuber Name"</string>
    <string name="nav_header_subtitle">"WCA ID"</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">"Home"</string>
    <string name="menu_profile">"Profile""</string>
    <string name="menu_faq">"FAQ"</string>
    <string name="menu_about_us">About Us</string>

    <string name="competition_instructions_how_to_compete_header">"How do I compete :"</string>
    <string name="competition_instructions_how_to_use_timer_header">"Using the timer :"</string>
    <string name="competition_instructions_podium_details_header">"Podium details :"</string>
    <string name="confirmation_description">Competitors will be presented with the first scramble on confirmation. All solves must be completed before the round ends and those expecting to podium should begin recording from this point forward. Competitors must ensure that they have read through WCA regulations as well as guidelines mentioned in the app before they begin. Good luck for your solves and have fun."</string>
    <string name="default_time">00:00.00</string>
    <string name="internet_warning">Ensure good network connectivity in case the loading screen persists for a long time.</string>
    <string name="qualification_criteria">QC</string>
    <string name="app_version">Version 0.0.6</string>
    <string name="profile_mobile_number">Mobile No.</string>
    <string name="profile_dob">DOB</string>
    <string name="profile_name">Name (as on WCA)</string>
    <string name="error_404">Error 404 : Not found</string>
    <string name="penalty_unusable_warning">Finish the solve to add a penalty.</string>
    <string name="about_me"><![CDATA[I\'m a terrible speedcuber and a not so terrible developer, and I made this thing. You can reach out to me with suggestions or complaints on one of these links.]]></string>
    <string name="about_us_description"><![CDATA[our only goal is to take speedcubing to the next level. We organize competitions, meet-ups & workshops, we create cube artworks & mosaics, and most importantly expand and bring together the speedcubing community around us. You can follow or reach out to us on one of the links below.]]></string>


    <string name="info_text_inspection"><![CDATA[Hold & Release to begin inspection.]]></string>
    <string name="info_text_solve"><![CDATA[Hold & Release to begin solve.]]></string>
    <string name="info_text_inspection_penalty">Inspection penalty (+2) added.</string>

    <string name="loading_screen_msg_1">Digging up information …</string>
    <string name="loading_screen_msg_2">Almost there …</string>
    <string name="loading_screen_msg_3">Fetching result status …</string>
    <string name="loading_screen_msg_4">Decoding scrambles …</string>
    <string name="loading_screen_msg_5">Uploading result …</string>
    <string name="loading_screen_msg_6">Building up suspense …</string>

    <!-- Firebase field names -->
    <string name="db_field_name_events">events</string>
    <string name="db_field_name_comp_details">competition_details</string>
    <string name="db_field_name_rounds">rounds</string>
    <string name="db_field_name_results">results</string>
    <string name="db_field_name_result_calc_method">result_calc_method</string>
    <string name="db_field_name_solve_count">solve_count</string>
    <string name="db_field_name_start_time">start_time</string>
    <string name="db_field_name_end_time">end_time</string>
    <string name="db_field_name_name">name</string>
    <string name="db_field_name_qualification_criteria">qualification_criteria</string>
    <string name="db_field_name_final_result">final_result</string>
    <string name="db_field_name_time_list">time_list</string>
    <string name="db_field_name_user_details">user_details</string>
    <string name="db_field_name_wca_id">wca_id</string>
    <string name="db_field_name_single">single</string>
    <string name="db_field_name_photo_url">photo_url</string>
    <string name="db_field_name_mobile">mobile</string>
    <string name="db_field_name_email">email</string>
    <string name="db_field_name_dob">dob</string>
    <string name="db_field_name_profile_pictures">profile_pictures</string>
    <string name="db_field_name_main_event">main_event</string>
    <string name="db_field_name_organizer">organizer</string>
    <string name="db_field_name_reg_start_time">registration_start_time</string>
    <string name="db_field_name_reg_end_time">registration_end_time</string>
    <string name="db_field_name_competitor_limit">competitor_limit</string>
    <string name="db_field_value_competitors">competitors</string>
    <string name="db_field_name_results_verified">results_verified</string>
    <string name="db_field_name_app_details">app_details</string>
    <string name="db_field_name_app_version">app_version</string>
    <string name="db_field_name_min_version_id">min_version_id</string>
    <string name="db_field_name_admin_min_version_id">admin_min_version_id</string>
    <string name="db_field_name_scrambles">scrambles</string>
    <string name="db_field_name_organizer_details">organizer_details</string>
    <string name="db_field_name_key">key</string>
    <string name="db_field_name_access">access</string>
    <string name="db_field_name_id">id</string>
    <string name="db_field_name_app_ratings">app_ratings</string>
    <string name="db_field_name_user_votes">user_votes</string>
    <string name="db_field_name_up_votes">up_votes</string>
    <string name="db_field_name_down_votes">down_votes</string>
    <string name="db_field_name_is_up_vote">isUpVote</string>

    <string-array name="competition_instructions_how_to_compete_details">
        <item>"The REGISTER button will go live in the mentioned registration period. Once a user registers for a competition, they are eligible to participate in all of it's events."</item>
        <item>"Competitors can check out the schedule and other competitors in a competition before registering. We request you to only register for competitions you are genuinely interested in."</item>
        <item>"The PARTICIPATE button will go live for the duration of the competition. On clicking PARTICIPATE, competitors can see live and upcoming rounds. On confirmation, participants can begin their solves once they are ready."</item>
        <item>"Competitors found guilty of cheating or other forms of misconduct may be temporarily/permanently banned from the platform. This includes registering for many competitions in a row without participating in any.</item>
        <item>"If a competitor expects a podium in any event, they must ensure that they records their solves as per the platform guidelines."</item>
    </string-array>

    <string-array name="competition_instructions_using_the_timer_details">
        <item>"Competitors must ensure good internet connectivity before they begin their solves."</item>
        <item>"The scramble for each solve will be presented before it begins. Once scrambled, competitors can cover their cubes and move on to the timer."</item>
        <item>"Timer has inspection built in, and will begin inspection time on long press and release. Inspection penalties are as per WCA guidelines (15s +2, 17s DNF)."</item>
        <item>"During the inspection, competitors can long press and release to begin the timer. While doing so, one hand must be on the timer and the other on a flat surface. The cube itself should not be held or touched during this period."</item>
        <item>"Once the timer begins, competitors can finish their solves and then tap on the timer to stop. Penalties (+2 and DNF) can be added once the solve is done."</item>
        <item>"On finishing the solve, UPLOAD button will activate. Clicking on it will upload your result to our backend and show you the next scramble. Rinse and repeat, easy."</item>
        <item>"If the app is closed without finishing a solve, the scramble for which is seen, that solve will count as DNF. We recommend finishing all solves in one go."</item>
    </string-array>

    <string-array name="competition_instructions_podium_details">
        <item>"Competitors expecting a podium must record their solves in the final round for that event."</item>
        <item>"Concerned videos can be uploaded either to Youtube or Google Drive, and the links to them must be submitted at teamcubenama@gmail.com"</item>
        <item>"Competitors should begin recording at the live rounds screen and continue recording till the final solve is done. Recordings must contain footage/screen capture for both the screens."</item>
        <item>"Organizers may directly contact competitors to verify results or raise enquiries."</item>
        <item>"Results without video proof will be DNF'd/deranked."</item>
    </string-array>
</resources>
