<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.cubenama.cubingcompanion.dashboardui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home"/>

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.cubenama.cubingcompanion.dashboardui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_faq"
        android:name="com.cubenama.cubingcompanion.dashboardui.faq.FaqFragment"
        android:label="@string/menu_faq"
        tools:layout="@layout/fragment_faq" />

    <fragment
        android:id="@+id/nav_about_us"
        android:name="com.cubenama.cubingcompanion.dashboardui.aboutus.AboutUsFragment"
        android:label="@string/menu_about_us"
        tools:layout="@layout/fragment_about_us" />
</navigation>