<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/nav_bar_background_edit"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingTop="24dp"
    android:paddingEnd="16dp"
    android:paddingBottom="24dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <androidx.cardview.widget.CardView
        android:layout_width="70dp"
        android:layout_height="70dp"
        app:cardBackgroundColor="#00FFFFFF"
        app:cardCornerRadius="35dp"
        app:cardElevation="2dp">

        <ImageView
            android:id="@+id/miniProfilePictureImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/nav_header_desc"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/default_avatar" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/cuberNameTextViewAlt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/abel"
        android:paddingTop="16dp"
        android:text="@string/nav_header_title"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/colorTextPrimaryLight"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/wcaIdTextViewAlt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/share_tech_mono"
        android:text="@string/nav_header_subtitle"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>
